String key to byte[]